# brawl-stars-draft-assistant

./: .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt
docs/: deployment.md
src/: __init__.py  config.py  main.py
src/bot/: main.py
src/data/: pipeline.py
src/database/: init_db.py
src/utils/: logging_config.py
